# Logger_libfreenect_custom

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  UninstallTarget.cmake  cmake_install.cmake
examples/: CMakeLists.txt  Makefile  cmake_install.cmake  regview.c  regview.cpp  regview_nowindow.cpp
fakenect/: Makefile  cmake_install.cmake
lib/: libfreenect.0.5.3.dylib  libfreenect.dylib  libfreenect_cv.0.5.3.dylib  libfreenect_cv.0.5.dylib  libfreenect_cv.dylib  libfreenect_sync.0.5.3.dylib  libfreenect_sync.0.5.dylib  libfreenect_sync.dylib
lib/fakenect/: libfreenect.0.5.3.dylib
src/: Makefile  cmake_install.cmake
wrappers/c_sync/: CMakeCache.txt  Makefile  cmake_install.cmake
wrappers/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpp_pc_view_player.cpp
wrappers/opencv/: CMakeLists.txt  Makefile  cmake_install.cmake  cvdemo.cpp  cvdemo_multi.cpp  libfreenect_cv.c
wrappers/opencv/capture/: 2016-06-20.02.klg
